Replace lr with learning_rate in Keras optimizers, fixes #456

--- a/11_training_deep_neural_networks.ipynb
+++ b/11_training_deep_neural_networks.ipynb
@@ -426,7 +426,7 @@
    "outputs": [],
    "source": [
     "model.compile(loss=\"sparse_categorical_crossentropy\",\n",
-    "              optimizer=keras.optimizers.SGD(lr=1e-3),\n",
+    "              optimizer=keras.optimizers.SGD(learning_rate=1e-3),\n",
     "              metrics=[\"accuracy\"])"
    ]
   },
@@ -502,7 +502,7 @@
    "outputs": [],
    "source": [
     "model.compile(loss=\"sparse_categorical_crossentropy\",\n",
-    "              optimizer=keras.optimizers.SGD(lr=1e-3),\n",
+    "              optimizer=keras.optimizers.SGD(learning_rate=1e-3),\n",
     "              metrics=[\"accuracy\"])"
    ]
   },
@@ -810,7 +810,7 @@
    "outputs": [],
    "source": [
     "model.compile(loss=\"sparse_categorical_crossentropy\",\n",
-    "              optimizer=keras.optimizers.SGD(lr=1e-3),\n",
+    "              optimizer=keras.optimizers.SGD(learning_rate=1e-3),\n",
     "              metrics=[\"accuracy\"])"
    ]
   },
@@ -899,7 +899,7 @@
    "outputs": [],
    "source": [
     "model.compile(loss=\"sparse_categorical_crossentropy\",\n",
-    "              optimizer=keras.optimizers.SGD(lr=1e-3),\n",
+    "              optimizer=keras.optimizers.SGD(learning_rate=1e-3),\n",
     "              metrics=[\"accuracy\"])"
    ]
   },
@@ -1039,7 +1039,7 @@
    "outputs": [],
    "source": [
     "model.compile(loss=\"sparse_categorical_crossentropy\",\n",
-    "              optimizer=keras.optimizers.SGD(lr=1e-3),\n",
+    "              optimizer=keras.optimizers.SGD(learning_rate=1e-3),\n",
     "              metrics=[\"accuracy\"])"
    ]
   },
@@ -1113,7 +1113,7 @@
    "outputs": [],
    "source": [
     "model.compile(loss=\"sparse_categorical_crossentropy\",\n",
-    "              optimizer=keras.optimizers.SGD(lr=1e-3),\n",
+    "              optimizer=keras.optimizers.SGD(learning_rate=1e-3),\n",
     "              metrics=[\"accuracy\"])"
    ]
   },
@@ -1346,7 +1346,7 @@
    "outputs": [],
    "source": [
     "model_A.compile(loss=\"sparse_categorical_crossentropy\",\n",
-    "                optimizer=keras.optimizers.SGD(lr=1e-3),\n",
+    "                optimizer=keras.optimizers.SGD(learning_rate=1e-3),\n",
     "                metrics=[\"accuracy\"])"
    ]
   },
@@ -1436,7 +1436,7 @@
    "outputs": [],
    "source": [
     "model_B.compile(loss=\"binary_crossentropy\",\n",
-    "                optimizer=keras.optimizers.SGD(lr=1e-3),\n",
+    "                optimizer=keras.optimizers.SGD(learning_rate=1e-3),\n",
     "                metrics=[\"accuracy\"])"
    ]
   },
@@ -1566,7 +1566,7 @@
     "    layer.trainable = False\n",
     "\n",
     "model_B_on_A.compile(loss=\"binary_crossentropy\",\n",
-    "                     optimizer=keras.optimizers.SGD(lr=1e-3),\n",
+    "                     optimizer=keras.optimizers.SGD(learning_rate=1e-3),\n",
     "                     metrics=[\"accuracy\"])"
    ]
   },
@@ -1630,7 +1630,7 @@
     "    layer.trainable = True\n",
     "\n",
     "model_B_on_A.compile(loss=\"binary_crossentropy\",\n",
-    "                     optimizer=keras.optimizers.SGD(lr=1e-3),\n",
+    "                     optimizer=keras.optimizers.SGD(learning_rate=1e-3),\n",
     "                     metrics=[\"accuracy\"])\n",
     "history = model_B_on_A.fit(X_train_B, y_train_B, epochs=16,\n",
     "                           validation_data=(X_valid_B, y_valid_B))"
@@ -1744,7 +1744,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = keras.optimizers.SGD(lr=0.001, momentum=0.9)"
+    "optimizer = keras.optimizers.SGD(learning_rate=0.001, momentum=0.9)"
    ]
   },
   {
@@ -1760,7 +1760,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = keras.optimizers.SGD(lr=0.001, momentum=0.9, nesterov=True)"
+    "optimizer = keras.optimizers.SGD(learning_rate=0.001, momentum=0.9, nesterov=True)"
    ]
   },
   {
@@ -1776,7 +1776,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = keras.optimizers.Adagrad(lr=0.001)"
+    "optimizer = keras.optimizers.Adagrad(learning_rate=0.001)"
    ]
   },
   {
@@ -1792,7 +1792,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = keras.optimizers.RMSprop(lr=0.001, rho=0.9)"
+    "optimizer = keras.optimizers.RMSprop(learning_rate=0.001, rho=0.9)"
    ]
   },
   {
@@ -1808,7 +1808,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = keras.optimizers.Adam(lr=0.001, beta_1=0.9, beta_2=0.999)"
+    "optimizer = keras.optimizers.Adam(learning_rate=0.001, beta_1=0.9, beta_2=0.999)"
    ]
   },
   {
@@ -1824,7 +1824,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = keras.optimizers.Adamax(lr=0.001, beta_1=0.9, beta_2=0.999)"
+    "optimizer = keras.optimizers.Adamax(learning_rate=0.001, beta_1=0.9, beta_2=0.999)"
    ]
   },
   {
@@ -1840,7 +1840,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = keras.optimizers.Nadam(lr=0.001, beta_1=0.9, beta_2=0.999)"
+    "optimizer = keras.optimizers.Nadam(learning_rate=0.001, beta_1=0.9, beta_2=0.999)"
    ]
   },
   {
@@ -1871,7 +1871,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = keras.optimizers.SGD(lr=0.01, decay=1e-4)"
+    "optimizer = keras.optimizers.SGD(learning_rate=0.01, decay=1e-4)"
    ]
   },
   {
@@ -2241,12 +2241,12 @@
     "\n",
     "    def on_batch_begin(self, batch, logs=None):\n",
     "        # Note: the `batch` argument is reset at each epoch\n",
-    "        lr = K.get_value(self.model.optimizer.lr)\n",
-    "        K.set_value(self.model.optimizer.lr, lr * 0.1**(1 / s))\n",
+    "        lr = K.get_value(self.model.optimizer.learning_rate)\n",
+    "        K.set_value(self.model.optimizer.learning_rate, lr * 0.1**(1 / s))\n",
     "\n",
     "    def on_epoch_end(self, epoch, logs=None):\n",
     "        logs = logs or {}\n",
-    "        logs['lr'] = K.get_value(self.model.optimizer.lr)\n",
+    "        logs['lr'] = K.get_value(self.model.optimizer.learning_rate)\n",
     "\n",
     "model = keras.models.Sequential([\n",
     "    keras.layers.Flatten(input_shape=[28, 28]),\n",
@@ -2255,7 +2255,7 @@
     "    keras.layers.Dense(10, activation=\"softmax\")\n",
     "])\n",
     "lr0 = 0.01\n",
-    "optimizer = keras.optimizers.Nadam(lr=lr0)\n",
+    "optimizer = keras.optimizers.Nadam(learning_rate=lr0)\n",
     "model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=optimizer, metrics=[\"accuracy\"])\n",
     "n_epochs = 25\n",
     "\n",
@@ -2539,7 +2539,7 @@
     "    keras.layers.Dense(100, activation=\"selu\", kernel_initializer=\"lecun_normal\"),\n",
     "    keras.layers.Dense(10, activation=\"softmax\")\n",
     "])\n",
-    "optimizer = keras.optimizers.SGD(lr=0.02, momentum=0.9)\n",
+    "optimizer = keras.optimizers.SGD(learning_rate=0.02, momentum=0.9)\n",
     "model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=optimizer, metrics=[\"accuracy\"])\n",
     "n_epochs = 25\n",
     "history = model.fit(X_train_scaled, y_train, epochs=n_epochs,\n",
@@ -2706,20 +2706,20 @@
     "        self.rates = []\n",
     "        self.losses = []\n",
     "    def on_batch_end(self, batch, logs):\n",
-    "        self.rates.append(K.get_value(self.model.optimizer.lr))\n",
+    "        self.rates.append(K.get_value(self.model.optimizer.learning_rate))\n",
     "        self.losses.append(logs[\"loss\"])\n",
-    "        K.set_value(self.model.optimizer.lr, self.model.optimizer.lr * self.factor)\n",
+    "        K.set_value(self.model.optimizer.learning_rate, self.model.optimizer.learning_rate * self.factor)\n",
     "\n",
     "def find_learning_rate(model, X, y, epochs=1, batch_size=32, min_rate=10**-5, max_rate=10):\n",
     "    init_weights = model.get_weights()\n",
     "    iterations = math.ceil(len(X) / batch_size) * epochs\n",
     "    factor = np.exp(np.log(max_rate / min_rate) / iterations)\n",
-    "    init_lr = K.get_value(model.optimizer.lr)\n",
-    "    K.set_value(model.optimizer.lr, min_rate)\n",
+    "    init_lr = K.get_value(model.optimizer.learning_rate)\n",
+    "    K.set_value(model.optimizer.learning_rate, min_rate)\n",
     "    exp_lr = ExponentialLearningRate(factor)\n",
     "    history = model.fit(X, y, epochs=epochs, batch_size=batch_size,\n",
     "                        callbacks=[exp_lr])\n",
-    "    K.set_value(model.optimizer.lr, init_lr)\n",
+    "    K.set_value(model.optimizer.learning_rate, init_lr)\n",
     "    model.set_weights(init_weights)\n",
     "    return exp_lr.rates, exp_lr.losses\n",
     "\n",
@@ -2749,9 +2749,9 @@
     "    def on_batch_end(self, batch, logs=None):\n",
     "        batch_loss = logs[\"loss\"] * (batch + 1) - self.prev_loss * batch\n",
     "        self.prev_loss = logs[\"loss\"]\n",
-    "        self.rates.append(K.get_value(self.model.optimizer.lr))\n",
+    "        self.rates.append(K.get_value(self.model.optimizer.learning_rate))\n",
     "        self.losses.append(batch_loss)\n",
-    "        K.set_value(self.model.optimizer.lr, self.model.optimizer.lr * self.factor)\n",
+    "        K.set_value(self.model.optimizer.learning_rate, self.model.optimizer.learning_rate * self.factor)\n",
     "```"
    ]
   },
@@ -2771,7 +2771,7 @@
     "    keras.layers.Dense(10, activation=\"softmax\")\n",
     "])\n",
     "model.compile(loss=\"sparse_categorical_crossentropy\",\n",
-    "              optimizer=keras.optimizers.SGD(lr=1e-3),\n",
+    "              optimizer=keras.optimizers.SGD(learning_rate=1e-3),\n",
     "              metrics=[\"accuracy\"])"
    ]
   },
@@ -2835,7 +2835,7 @@
     "            rate = self._interpolate(2 * self.half_iteration, self.iterations,\n",
     "                                     self.start_rate, self.last_rate)\n",
     "        self.iteration += 1\n",
-    "        K.set_value(self.model.optimizer.lr, rate)"
+    "        K.set_value(self.model.optimizer.learning_rate, rate)"
    ]
   },
   {
@@ -3123,7 +3123,7 @@
     "    keras.layers.AlphaDropout(rate=0.2),\n",
     "    keras.layers.Dense(10, activation=\"softmax\")\n",
     "])\n",
-    "optimizer = keras.optimizers.SGD(lr=0.01, momentum=0.9, nesterov=True)\n",
+    "optimizer = keras.optimizers.SGD(learning_rate=0.01, momentum=0.9, nesterov=True)\n",
     "model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=optimizer, metrics=[\"accuracy\"])\n",
     "n_epochs = 20\n",
     "history = model.fit(X_train_scaled, y_train, epochs=n_epochs,\n",
@@ -3624,7 +3624,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = keras.optimizers.SGD(lr=0.01, momentum=0.9, nesterov=True)\n",
+    "optimizer = keras.optimizers.SGD(learning_rate=0.01, momentum=0.9, nesterov=True)\n",
     "mc_model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=optimizer, metrics=[\"accuracy\"])"
    ]
   },
@@ -3806,7 +3806,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = keras.optimizers.Nadam(lr=5e-5)\n",
+    "optimizer = keras.optimizers.Nadam(learning_rate=5e-5)\n",
     "model.compile(loss=\"sparse_categorical_crossentropy\",\n",
     "              optimizer=optimizer,\n",
     "              metrics=[\"accuracy\"])"
@@ -4136,7 +4136,7 @@
     "    model.add(keras.layers.Activation(\"elu\"))\n",
     "model.add(keras.layers.Dense(10, activation=\"softmax\"))\n",
     "\n",
-    "optimizer = keras.optimizers.Nadam(lr=5e-4)\n",
+    "optimizer = keras.optimizers.Nadam(learning_rate=5e-4)\n",
     "model.compile(loss=\"sparse_categorical_crossentropy\",\n",
     "              optimizer=optimizer,\n",
     "              metrics=[\"accuracy\"])\n",
@@ -4267,7 +4267,7 @@
     "                                 activation=\"selu\"))\n",
     "model.add(keras.layers.Dense(10, activation=\"softmax\"))\n",
     "\n",
-    "optimizer = keras.optimizers.Nadam(lr=7e-4)\n",
+    "optimizer = keras.optimizers.Nadam(learning_rate=7e-4)\n",
     "model.compile(loss=\"sparse_categorical_crossentropy\",\n",
     "              optimizer=optimizer,\n",
     "              metrics=[\"accuracy\"])\n",
@@ -4430,7 +4430,7 @@
     "model.add(keras.layers.AlphaDropout(rate=0.1))\n",
     "model.add(keras.layers.Dense(10, activation=\"softmax\"))\n",
     "\n",
-    "optimizer = keras.optimizers.Nadam(lr=5e-4)\n",
+    "optimizer = keras.optimizers.Nadam(learning_rate=5e-4)\n",
     "model.compile(loss=\"sparse_categorical_crossentropy\",\n",
     "              optimizer=optimizer,\n",
     "              metrics=[\"accuracy\"])\n",
@@ -4592,7 +4592,7 @@
     "model.add(keras.layers.AlphaDropout(rate=0.1))\n",
     "model.add(keras.layers.Dense(10, activation=\"softmax\"))\n",
     "\n",
-    "optimizer = keras.optimizers.SGD(lr=1e-3)\n",
+    "optimizer = keras.optimizers.SGD(learning_rate=1e-3)\n",
     "model.compile(loss=\"sparse_categorical_crossentropy\",\n",
     "              optimizer=optimizer,\n",
     "              metrics=[\"accuracy\"])"
@@ -4663,7 +4663,7 @@
     "model.add(keras.layers.AlphaDropout(rate=0.1))\n",
     "model.add(keras.layers.Dense(10, activation=\"softmax\"))\n",
     "\n",
-    "optimizer = keras.optimizers.SGD(lr=1e-2)\n",
+    "optimizer = keras.optimizers.SGD(learning_rate=1e-2)\n",
     "model.compile(loss=\"sparse_categorical_crossentropy\",\n",
     "              optimizer=optimizer,\n",
     "              metrics=[\"accuracy\"])"
