--- a/13_loading_and_preprocessing_data.ipynb
+++ b/13_loading_and_preprocessing_data.ipynb
@@ -923,7 +923,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(loss=\"mse\", optimizer=keras.optimizers.SGD(lr=1e-3))"
+    "model.compile(loss=\"mse\", optimizer=keras.optimizers.SGD(learning_rate=1e-3))"
    ]
   },
   {
@@ -1045,7 +1045,7 @@
     }
    ],
    "source": [
-    "optimizer = keras.optimizers.Nadam(lr=0.01)\n",
+    "optimizer = keras.optimizers.Nadam(learning_rate=0.01)\n",
     "loss_fn = keras.losses.mean_squared_error\n",
     "\n",
     "n_epochs = 5\n",
@@ -1081,7 +1081,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = keras.optimizers.Nadam(lr=0.01)\n",
+    "optimizer = keras.optimizers.Nadam(learning_rate=0.01)\n",
     "loss_fn = keras.losses.mean_squared_error\n",
     "\n",
     "@tf.function\n",
@@ -1143,7 +1143,7 @@
     }
    ],
    "source": [
-    "optimizer = keras.optimizers.Nadam(lr=0.01)\n",
+    "optimizer = keras.optimizers.Nadam(learning_rate=0.01)\n",
     "loss_fn = keras.losses.mean_squared_error\n",
     "\n",
     "@tf.function\n",
@@ -2820,7 +2820,7 @@
     "    keras.layers.Dense(1)\n",
     "])\n",
     "model.compile(loss=\"mse\",\n",
-    "              optimizer=keras.optimizers.SGD(lr=1e-3),\n",
+    "              optimizer=keras.optimizers.SGD(learning_rate=1e-3),\n",
     "              metrics=[\"accuracy\"])\n",
     "model.fit(dataset, steps_per_epoch=len(X_train) // batch_size, epochs=5)"
    ]
@@ -3081,7 +3081,7 @@
     "    keras.layers.Lambda(lambda images: tf.cast(images, tf.float32)),\n",
     "    keras.layers.Dense(10, activation=\"softmax\")])\n",
     "model.compile(loss=\"sparse_categorical_crossentropy\",\n",
-    "              optimizer=keras.optimizers.SGD(lr=1e-3),\n",
+    "              optimizer=keras.optimizers.SGD(learning_rate=1e-3),\n",
     "              metrics=[\"accuracy\"])\n",
     "model.fit(mnist_train, steps_per_epoch=60000 // 32, epochs=5)"
    ]
