--- a/18_reinforcement_learning.ipynb
+++ b/18_reinforcement_learning.ipynb
@@ -1045,7 +1045,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = keras.optimizers.Adam(lr=0.01)\n",
+    "optimizer = keras.optimizers.Adam(learning_rate=0.01)\n",
     "loss_fn = keras.losses.binary_crossentropy"
    ]
   },
@@ -1680,7 +1680,7 @@
    "source": [
     "batch_size = 32\n",
     "discount_rate = 0.95\n",
-    "optimizer = keras.optimizers.Adam(lr=1e-2)\n",
+    "optimizer = keras.optimizers.Adam(learning_rate=1e-2)\n",
     "loss_fn = keras.losses.mean_squared_error\n",
     "\n",
     "def training_step(batch_size):\n",
@@ -1853,7 +1853,7 @@
    "source": [
     "batch_size = 32\n",
     "discount_rate = 0.95\n",
-    "optimizer = keras.optimizers.Adam(lr=6e-3)\n",
+    "optimizer = keras.optimizers.Adam(learning_rate=6e-3)\n",
     "loss_fn = keras.losses.Huber()\n",
     "\n",
     "def training_step(batch_size):\n",
@@ -2029,7 +2029,7 @@
    "source": [
     "batch_size = 32\n",
     "discount_rate = 0.95\n",
-    "optimizer = keras.optimizers.Adam(lr=7.5e-3)\n",
+    "optimizer = keras.optimizers.Adam(learning_rate=7.5e-3)\n",
     "loss_fn = keras.losses.Huber()\n",
     "\n",
     "def training_step(batch_size):\n",
@@ -2922,7 +2922,7 @@
     "\n",
     "train_step = tf.Variable(0)\n",
     "update_period = 4 # run a training step every 4 collect steps\n",
-    "optimizer = keras.optimizers.RMSprop(lr=2.5e-4, rho=0.95, momentum=0.0,\n",
+    "optimizer = keras.optimizers.RMSprop(learning_rate=2.5e-4, rho=0.95, momentum=0.0,\n",
     "                                     epsilon=0.00001, centered=True)\n",
     "epsilon_fn = keras.optimizers.schedules.PolynomialDecay(\n",
     "    initial_learning_rate=1.0, # initial ε\n",
@@ -4176,7 +4176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = keras.optimizers.Nadam(lr=0.005)\n",
+    "optimizer = keras.optimizers.Nadam(learning_rate=0.005)\n",
     "loss_fn = keras.losses.sparse_categorical_crossentropy"
    ]
   },
