[Chapter 11] Text fix for l1 l2 regularization section

--- a/11_training_deep_neural_networks.ipynb
+++ b/11_training_deep_neural_networks.ipynb
@@ -2931,7 +2931,7 @@
     "layer = keras.layers.Dense(100, activation=\"elu\",\n",
     "                           kernel_initializer=\"he_normal\",\n",
     "                           kernel_regularizer=keras.regularizers.l2(0.01))\n",
-    "# or l1(0.1) for ℓ1 regularization with a factor or 0.1\n",
+    "# or l1(0.1) for ℓ1 regularization with a factor of 0.1\n",
     "# or l1_l2(0.1, 0.01) for both ℓ1 and ℓ2 regularization, with factors 0.1 and 0.01 respectively"
    ]
   },
