Fix some section levels

--- a/12_custom_models_and_training_with_tensorflow.ipynb
+++ b/12_custom_models_and_training_with_tensorflow.ipynb
@@ -5866,7 +5866,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 12. Implement a custom layer that performs _Layer Normalization_\n",
+    "## 12. Implement a custom layer that performs _Layer Normalization_\n",
     "_We will use this type of layer in Chapter 15 when using Recurrent Neural Networks._"
    ]
   },
