--- a/13_loading_and_preprocessing_data.ipynb
+++ b/13_loading_and_preprocessing_data.ipynb
@@ -2693,7 +2693,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using Feature Columns for Parsing"
+    "## Using Feature Columns for Parsing"
    ]
   },
   {
