Add some section headers

--- a/02_end_to_end_machine_learning_project.ipynb
+++ b/02_end_to_end_machine_learning_project.ipynb
@@ -83,7 +83,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Get the data"
+    "# Get the Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Download the Data"
    ]
   },
   {
@@ -130,6 +137,13 @@
     "def load_housing_data(housing_path=HOUSING_PATH):\n",
     "    csv_path = os.path.join(housing_path, \"housing.csv\")\n",
     "    return pd.read_csv(csv_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Take a Quick Look at the Data Structure"
    ]
   },
   {
@@ -534,6 +548,13 @@
     "housing.hist(bins=50, figsize=(20,15))\n",
     "save_fig(\"attribute_histogram_plots\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a Test Set"
    ]
   },
   {
@@ -1274,7 +1295,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Discover and visualize the data to gain insights"
+    "# Discover and Visualize the Data to Gain Insights"
    ]
   },
   {
@@ -1284,6 +1305,13 @@
    "outputs": [],
    "source": [
     "housing = strat_train_set.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualizing Geographical Data"
    ]
   },
   {
@@ -1471,6 +1499,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Looking for Correlations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
@@ -1573,6 +1608,13 @@
     "             alpha=0.1)\n",
     "plt.axis([0, 16, 0, 550000])\n",
     "save_fig(\"income_vs_house_value_scatterplot\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Experimenting with Attribute Combinations"
    ]
   },
   {
@@ -1864,7 +1906,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Prepare the data for Machine Learning algorithms"
+    "# Prepare the Data for Machine Learning Algorithms"
    ]
   },
   {
@@ -1875,6 +1917,29 @@
    "source": [
     "housing = strat_train_set.drop(\"median_house_value\", axis=1) # drop labels for training set\n",
     "housing_labels = strat_train_set[\"median_house_value\"].copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Cleaning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the book 3 options are listed:\n",
+    "\n",
+    "```python\n",
+    "housing.dropna(subset=[\"total_bedrooms\"])    # option 1\n",
+    "housing.drop(\"total_bedrooms\", axis=1)       # option 2\n",
+    "median = housing[\"total_bedrooms\"].median()  # option 3\n",
+    "housing[\"total_bedrooms\"].fillna(median, inplace=True)\n",
+    "```\n",
+    "\n",
+    "To demonstrate each of them, let's create a copy of the housing dataset, but keeping only the rows that contain at least one null. Then it will be easier to visualize exactly what each option does:"
    ]
   },
   {
@@ -2718,6 +2783,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Handling Text and Categorical Attributes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now let's preprocess the categorical input feature, `ocean_proximity`:"
    ]
   },
@@ -2991,6 +3063,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Custom Transformers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Let's create a custom transformer to add extra attributes:"
    ]
   },
@@ -3197,6 +3276,13 @@
     "    columns=list(housing.columns)+[\"rooms_per_household\", \"population_per_household\"],\n",
     "    index=housing.index)\n",
     "housing_extra_attribs.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Transformation Pipelines"
    ]
   },
   {
@@ -3459,7 +3545,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Select and train a model "
+    "# Select and Train a Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training and Evaluating on the Training Set"
    ]
   },
   {
@@ -3676,7 +3769,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fine-tune your model"
+    "## Better Evaluation Using Cross-Validation"
    ]
   },
   {
@@ -3875,6 +3968,20 @@
     "svm_mse = mean_squared_error(housing_labels, housing_predictions)\n",
     "svm_rmse = np.sqrt(svm_mse)\n",
     "svm_rmse"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fine-Tune Your Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Grid Search"
    ]
   },
   {
@@ -4627,6 +4734,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Randomized Search"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 104,
    "metadata": {},
@@ -4686,6 +4800,13 @@
     "cvres = rnd_search.cv_results_\n",
     "for mean_score, params in zip(cvres[\"mean_test_score\"], cvres[\"params\"]):\n",
     "    print(np.sqrt(-mean_score), params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analyze the Best Models and Their Errors"
    ]
   },
   {
@@ -4750,6 +4871,13 @@
     "cat_one_hot_attribs = list(cat_encoder.categories_[0])\n",
     "attributes = num_attribs + extra_attribs + cat_one_hot_attribs\n",
     "sorted(zip(feature_importances, attributes), reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate Your System on the Test Set"
    ]
   },
   {
