--- a/03_classification.ipynb
+++ b/03_classification.ipynb
@@ -351,7 +351,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Binary classifier"
+    "# Training a Binary Classifier"
    ]
   },
   {
@@ -433,6 +433,20 @@
    "source": [
     "from sklearn.model_selection import cross_val_score\n",
     "cross_val_score(sgd_clf, X_train, y_train_5, cv=3, scoring=\"accuracy\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Performance Measures"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Measuring Accuracy Using Cross-Validation"
    ]
   },
   {
@@ -523,6 +537,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Confusion Matrix"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -576,6 +597,13 @@
    "source": [
     "y_train_perfect_predictions = y_train_5  # pretend we reached perfection\n",
     "confusion_matrix(y_train_5, y_train_perfect_predictions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Precision and Recall"
    ]
   },
   {
@@ -701,6 +729,13 @@
    ],
    "source": [
     "cm[1, 1] / (cm[1, 1] + (cm[1, 0] + cm[0, 1]) / 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Precision/Recall Trade-off"
    ]
   },
   {
@@ -992,7 +1027,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ROC curves"
+    "## The ROC Curve"
    ]
   },
   {
@@ -1208,7 +1243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Multiclass classification"
+    "# Multiclass Classification"
    ]
   },
   {
@@ -1458,7 +1493,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Error analysis"
+    "# Error Analysis"
    ]
   },
   {
@@ -1625,7 +1660,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Multilabel classification"
+    "# Multilabel Classification"
    ]
   },
   {
@@ -1707,7 +1742,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Multioutput classification"
+    "# Multioutput Classification"
    ]
   },
   {
