--- a/04_training_linear_models.ipynb
+++ b/04_training_linear_models.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Chapter 4 – Training Linear Models**"
+    "**Chapter 4 – Training Models**"
    ]
   },
   {
@@ -89,7 +89,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Linear regression using the Normal Equation"
+    "# Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Normal Equation"
    ]
   },
   {
@@ -367,7 +374,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Linear regression using batch gradient descent"
+    "# Gradient Descent\n",
+    "## Batch Gradient Descent"
    ]
   },
   {
@@ -498,7 +506,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Stochastic Gradient Descent"
+    "## Stochastic Gradient Descent"
    ]
   },
   {
@@ -638,7 +646,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mini-batch gradient descent"
+    "## Mini-batch gradient descent"
    ]
   },
   {
@@ -748,7 +756,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Polynomial regression"
+    "# Polynomial Regression"
    ]
   },
   {
@@ -964,6 +972,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Learning Curves"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
@@ -1065,7 +1080,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Regularized models"
+    "# Regularized Linear Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ridge Regression"
    ]
   },
   {
@@ -1213,6 +1235,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lasso Regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
@@ -1283,6 +1312,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Elastic Net"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
@@ -1306,6 +1342,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Early Stopping"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
@@ -1317,13 +1360,6 @@
     "y = 2 + X + 0.5 * X**2 + np.random.randn(m, 1)\n",
     "\n",
     "X_train, X_val, y_train, y_val = train_test_split(X[:50], y[:50].ravel(), test_size=0.5, random_state=10)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Early stopping example:"
    ]
   },
   {
@@ -1572,7 +1608,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Logistic regression"
+    "# Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Decision Boundaries"
    ]
   },
   {
@@ -1890,6 +1933,13 @@
    ],
    "source": [
     "log_reg.predict([[1.7], [1.5]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Softmax Regression"
    ]
   },
   {
